# Mitch9192

./: LICENSE  README.md
terminal/: CMakeLists.txt  console.cpp  console.h  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
terminal/terminal.app/Contents/: Info.plist
